本番環境に合わせる

--- a/app/templates/app/sensor_graph.html
+++ b/app/templates/app/sensor_graph.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="mt-4">温度、湿度、照度の分析</h1>
+        <h1 class="mt-4">盆栽</h1>
 
         <!-- 日付選択用のDatepicker -->
         <div class="input-group mb-3">
